--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-social-login-buttons": "^4.1.0",
+    "react-toastify": "^8.0.0",
     "reactjs-social-login": "^2.6.3",
     "web-vitals": "^2.1.4"
   },
