--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
+    "react-data-table-component": "^7.6.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
