--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-data-table-component": "^7.6.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^3.0.1",
     "react-select": "^5.8.0",
